# WinGetUpdater

./: CMakeLists.txt  README.md
src/: Application.cpp  Window.cpp  Window.h  mainWindow.cpp  mainWindow.h  preCompiled.h
